# cvortex

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
bench/: CMakeLists.txt  benchP2D.c  benchP2D.h  benchP3D.c  benchP3D.h  bencharraysetup.c  bencharraysetup.h  benchinitilisation.h  benchmain.c  benchparticlesetup.c  benchparticlesetup.h  benchredistribution.c  benchredistribution.h  benchtools.c  benchtools.h
doc/: libcvtx.dox
example/: CMakeLists.txt  VortexRings.c  bench_gaussian.c  vortex_tunnel.c
include/cvortex/: LegacyVtk.h  Particle.h  ParticleKernelFunctions.h  Vec3f.h  VortFunc.h  libcvtx.dox  libcvtx.h  opencl_acc.h
src/: F3D.c  F3D.cpp  GridParticleOcttree.cpp  GridParticleOcttree.h  GridParticleQuadtree.cpp  GridParticleQuadtree.h  LegacyVtk.c  LegacyVtk.h  OclDeviceState.cpp  OclDeviceState.h  OclPlatformState.cpp  OclPlatformState.h  P2D.c  P2D.cpp  P3D.c  P3D.cpp  Particle.c  ParticleKernelFunctions.c  README.md  RedistFunc.cpp  StraightVortFil.c  UIntKey64.cpp  UIntKey64.h  UIntKey64.hpp  UIntKey96.cpp  UIntKey96.h  UIntKey96.hpp  Vec3f.c  VortFunc.c  VortFunc.cpp  accelerators.c  accelerators.cpp  array_methods.cpp  array_methods.h  cpp_types.hpp  eigen_types.hpp  fast_maths.hpp  gridkey.c  gridkey.h  nbody.cl  (+28 more)
test/: CMakeLists.txt  readfloatarray.h  testVortFunc.h  testaccelerators.h  testmain.c  testparticle.h  testsamecpugpuresult.h  testsamecpugpuresultmany.h  testsamecpugpuresultsingle.h  testvec3f.h  testvortfunc.h
tools/: cstringify.c
